# peng-agent

./: .gitignore  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build-rootfs.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/skills/error-recovery/: SKILL.md
app/src/main/assets/skills/error-recovery/references/: fallback_patterns.py  retry_strategies.py
app/src/main/assets/skills/kaznu-recruit-video/: SKILL.md
app/src/main/assets/skills/knowledge-base/: SKILL.md
app/src/main/assets/skills/phone-control/: SKILL.md
app/src/main/assets/skills/self-improving-agent/: SKILL.md
app/src/main/assets/skills/systematic-debugging/: SKILL.md
app/src/main/assets/skills/task-planner/: SKILL.md
app/src/main/assets/skills/verification/: SKILL.md
app/src/main/assets/skills/video-production/: SKILL.md
app/src/main/assets/skills/web-search/: SKILL.md
app/src/main/assets/skills/writing-plans/: SKILL.md
app/src/main/assets/ubuntu-rootfs/: README.md
app/src/main/java/com/peng/agent/client/: IpcBackendClient.kt
app/src/main/kotlin/com/peng/agent/: MainActivity.kt  PengApplication.kt
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: accessibility_service_config.xml  file_paths.xml  network_security_config.xml
crates/: Cargo.toml
crates/.cargo/: config.toml
crates/peng-core/: Cargo.toml
crates/peng-core/src/: lib.rs  types.rs
crates/peng-core/src/agent/: agent_loop.rs  mod.rs
crates/peng-core/src/compression/: context_compressor.rs  mod.rs
crates/peng-core/src/config/: mod.rs
crates/peng-core/src/llm/: client.rs  mod.rs  provider.rs  sse.rs
crates/peng-core/src/memory/: core_memory.rs  engine.rs  knowledge.rs  mod.rs  recall_memory.rs
crates/peng-core/src/skills/: mod.rs  skill_loader.rs
crates/peng-core/src/tools/: code.rs  file.rs  media.rs  memory.rs  mod.rs  phone.rs  router.rs  web.rs
crates/peng-daemon/: Cargo.toml
crates/peng-daemon/src/: ipc_unix.rs  main.rs  protocol.rs
crates/peng-shell/: Cargo.toml
crates/peng-shell/src/: bootstrap.rs  bridge.rs  lib.rs
(+58 files in other folders)
