[workspace]
resolver = "2"
members = [
    "peng-core",
    "peng-shell",
    "peng-daemon",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["PengDev"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "process", "io-util"] }

# HTTP client (LLM API + web tools)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# SQLite (memory + knowledge)
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async stream utilities
futures-util = "0.3"

# Concurrency
parking_lot = "0.12"
once_cell = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# File system
walkdir = "2"

# Logging
log = "0.4"

# Internal crates
peng-core = { path = "peng-core" }
peng-shell = { path = "peng-shell" }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
panic = "abort"
