[package]
name = "peng-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "peng-daemon"
path = "src/main.rs"

[dependencies]
peng-core = { workspace = true }
peng-shell = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
anyhow = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"